lp/matrix/lp/matrix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix
  namespace: matrix
  labels:
    app: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
        - name: matrix
          image: matrixdotorg/synapse:latest
#          args:
#          - generate
          volumeMounts:
          - mountPath: /data
            name: matrix
      volumes:
      - name: matrix
        persistentVolumeClaim:
          claimName: matrix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
spec:
  ports:
  - name: http
    targetPort: 8008
    port: 8008
  selector:
    app: matrix
  type: NodePort
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-http
  namespace: matrix
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`matrix-lp.allarddcs.nl`)
    kind: Rule
    services:
    - name: matrix
      port: 8008
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-tls
  namespace: matrix
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`matrix-lp.allarddcs.nl`)
    kind: Rule
    services:
    - name: matrix
      port: 8008
  tls:
    secretName: matrix-lp.allarddcs.nl-tls
#    certResolver: letsencrypt
